--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,7 +35,7 @@
         android:theme="@style/Theme.ComposeDIModule"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".HomePage"
             android:exported="true"
             android:theme="@style/Theme.ComposeDIModule">
             <intent-filter>
